--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "webpack": "^5.61.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "nodemon": "^2.0.15"
   },
   "browserslist": [
     "defaults"
